--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="%PUBLIC_URL%/logo-2021.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta name="description" content="hackTAMS Spring 2021 Website" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-2021.svg" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>HackTAMS 2021</title>
+        <title>hackTAMS 2021</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
